# Sorter-Sawyer-EE106A-FInal-Project

./: .gitignore  Circle_Detection.ipynb  README.md  baxter.sh
camera_test/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
camera_test/src/: camera_display.py  head_display_image.py
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: camera_test_pkg.pc
devel/share/camera_test_pkg/cmake/: camera_test_pkgConfig.cmake
src/: .gitignore  .nfs00000000041b903b000021f5  .rosinstall  .rosinstall.bak
src/ar_marker/: CMakeLists.txt  package.xml
src/ar_marker/scripts/: ar_srv.py
src/ar_marker/srv/: ArLastMarker.srv  ArMarkerPose.srv
src/baxter_pnp/: CMakeLists.txt  package.xml
src/baxter_pnp/launch/: baxter_pick_and_place_demo.launch
src/baxter_pnp/scripts/: ik_pick_and_place_demo.py  ik_throw_solver.py  ik_throw_srv.py  pnp_moveit.py  pnp_srv.py
src/baxter_pnp/srv/: HeadMovement.srv  JointMovement.srv  PickAndPlace.srv  PositionMovement.srv
src/camera_test/: Circle_Detection.ipynb
src/camera_test_pkg/: CMakeLists.txt  package.xml
src/camera_test_pkg/src/: camera_display.py  camera_listener_sub.py
src/homography/: CMakeLists.txt  package.xml
src/homography/launch/: run_cam.launch  webcam_track.launch  webcam_track.launch.old
src/homography/scripts/: ar_srv.py  homography_node.py  homography_node2.py
src/homography/srv/: ArMarkerPose.srv
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/scripts/: circle.py  circle_srv.py  color_srv.py  detect_shapes.py
src/object_detection/scripts/shape-detection/: detect_shapes.py
src/object_detection/scripts/shape-detection/pyimagesearch/: shapedetector.py
src/object_detection/srv/: ObjectPose.srv  ObjectPoses.srv
